# Softkill9000

./: .gitignore  COLAB_READY.md  COLAB_SETUP.md  README.md  pyproject.toml  requirements.txt
examples/: run_in_colab.ipynb
